--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,10 @@ html{
   background-image: url('http://www.thestate.com/living/food-drink/fm5ti4/picture82310927/ALTERNATES/FREE_640/NUP_164236_0646');
   background-size: cover;
   background-attachment: fixed;
-  background-color: inherit;
+  background-
 }
 body{
-color: #1AFF29;
+color: #F5FF00;
 }
 h1,h2,h3,h4 {text-align: center;
   ;}
