--- a/styles.css
+++ b/styles.css
@@ -5,27 +5,12 @@ html{
   background-
 }
 body{
-color: #F5FF00;
+color: #F5FF01;
 }
 h1,h2,h3,h4 {text-align: center;
   ;}
-  .nav-links{
-    width: 800px;
-  margin: 0 auto;
-  text-align: center;
-  padding: 0;
-  list-style: none;
 
-  .nav-link{
-    border: 2px solid red;
-    display: inline-block;
-    width: 500px;
-    text-align: center;
-  }
 
-  .nav-link a{
-    text-decoration: none;
-    color: blue;
-    font-weight: bold;
-    font-size: 30px;
-  }
+
+  a
+  url(http://i.giphy.com/t7916DnhDUIXS.gif);
